<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.igabeto.tictactoeultra.Menu">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnPlayNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_border"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnPlayNormal"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnPlayUltra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_border"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnPlayUltra"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/version_info"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dev_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dev_info"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
