<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.igabeto.tictactoeultra.PlayNormal">

    <LinearLayout
        android:id="@+id/turnHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="40dp">

        <TextView
            android:id="@+id/turn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/actual_turn"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTurn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:text="O"
            android:textAllCaps="true"
            android:textColor="@color/colorO"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cells0to2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cell0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="0"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="1"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="2"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cells3to5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cell3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="3"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="4"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="5"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cells6to8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cell6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="6"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="7"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cell8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cells_border"
            android:gravity="center"
            android:tag="8"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/winO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/winO"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/winX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/winX"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnPlayAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/play_again"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnMainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_menu"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
